{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 10,
  "lineage": "014389e8-9ae9-783b-b558-291b5d1762a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:internet-gateway/igw-0ec8644684f0d35c0",
            "id": "igw-0ec8644684f0d35c0",
            "owner_id": "207567792660",
            "tags": {
              "Name": "scylldb_simple_app-igw",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-igw",
              "environment": "dev"
            },
            "vpc_id": "vpc-0f19a72f193293fc9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ec8644684f0d35c0",
            "id": "r-rtb-0ab4fed6859cd69f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab4fed6859cd69f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:route-table/rtb-0ab4fed6859cd69f1",
            "id": "rtb-0ab4fed6859cd69f1",
            "owner_id": "207567792660",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec8644684f0d35c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "scylldb_simple_app-public-rt",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-public-rt",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f19a72f193293fc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085478872c36addf4",
            "route_table_id": "rtb-0ab4fed6859cd69f1",
            "subnet_id": "subnet-04ca47d2ba15fcc54"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0853d6c10590126f0",
            "route_table_id": "rtb-0ab4fed6859cd69f1",
            "subnet_id": "subnet-00c103df40b3910d0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:subnet/subnet-04ca47d2ba15fcc54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ca47d2ba15fcc54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207567792660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scylldb_simple_app-public-subnet-0",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-public-subnet-0",
              "environment": "dev"
            },
            "vpc_id": "vpc-0f19a72f193293fc9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:subnet/subnet-00c103df40b3910d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c103df40b3910d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "207567792660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scylldb_simple_app-public-subnet-1",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-public-subnet-1",
              "environment": "dev"
            },
            "vpc_id": "vpc-0f19a72f193293fc9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:207567792660:vpc/vpc-0f19a72f193293fc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03cf3148cd136a3e1",
            "default_route_table_id": "rtb-04b16b26f1a6d0d0c",
            "default_security_group_id": "sg-04726fd14d2852771",
            "dhcp_options_id": "dopt-046afa0c2af62860d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f19a72f193293fc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b16b26f1a6d0d0c",
            "owner_id": "207567792660",
            "tags": {
              "Name": "scylldb_simple_app-vpc",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "scylldb_simple_app-vpc",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}